--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ledger libraries are too large to push...
+libbat-*.a
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
