--- a/BraveRewards.xcodeproj/xcshareddata/xcschemes/BraveRewards.xcscheme
+++ b/BraveRewards.xcodeproj/xcshareddata/xcschemes/BraveRewards.xcscheme
@@ -61,6 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A1FDE6D020D2AA7400F92CAF"
+            BuildableName = "BraveRewards.framework"
+            BlueprintName = "BraveRewards"
+            ReferencedContainer = "container:BraveRewards.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
