Fix #23, Fix #50: Use objc-gen to generate NativeAdsClient + Bridge

--- a/BraveRewards/objc-gen/objc-gen.xcodeproj/xcshareddata/xcschemes/objc-gen.xcscheme
+++ b/BraveRewards/objc-gen/objc-gen.xcodeproj/xcshareddata/xcschemes/objc-gen.xcscheme
@@ -82,6 +82,11 @@
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
+            key = "BATAdsPath"
+            value = "$(PROJECT_DIR)/../Ads"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "BATLedgerPath"
             value = "$(PROJECT_DIR)/../Ledger"
             isEnabled = "YES">
